--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,3 @@
-.home{
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  background-color: brown;
-  width: 400px;
-  height: 500px;
-  color: white;
-  border-radius: 8%;
+body{
+  background-color: blue;
 }
